<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">1clic1prof</string>
    <string name="Connection_Message">Bon retour parmi nous !</string>
    <string name="Inscription">S\'inscrire</string>
    <string name="Button_Connection">Se connecter</string>
    <string name="LogOut">Se Déconnecter</string>
    <string name="Email_Text">Mail</string>
    <string name="Password_Text">Mot de passe</string>
    <string name="Forgot_Password">mot de passe oublié ?</string>
    <string name="Icon_name" translatable="false">Icon_1clic1prof</string>
    <string name="Hint_pwd" translatable="false">******</string>
    <string name="Notification" translatable="false">Notification</string>
    <string name="FirstName">Prénom</string>
    <string name="LastName">Nom</string>
    <string name="CB_Text" translatable="false">CB</string>
    <string name="ImageModification" tools:ignore="MissingTranslation">Changer la photo</string>
    <string name="profile_image">Image de profil</string>
    <string name="Welcome_Message">Bienvenue</string>
    <string name="Teacher">Professeur</string>
    <string name="statutIs">je suis :</string>
    <string name="Dialog_error" translatable="false">Une erreur est survenue</string>
    <string name="Dialog_connectionLoading" translatable="false">Connection en cours</string>
    <string name="Dialog_loginConfirmed" translatable="false">Connection réussie</string>
    <string name="IBAN_Text" translatable="false">IBAN</string>
    <string name="Description_visibility" translatable="false">Icône pour changer la visibilité</string>
    <string name="Dialog_teacher" translatable="false">Vous ne pouvez vous inscrire en tant que professeur sur l\'application. Veuillez passer par le site <a href="https://1clic1prof.fr/">1clic1prof</a> pour cela.</string>
    <string name="Dialog_inscriptionLoading" translatable="false">Inscription en cours</string>

    <string-array name="SchoolLevel">
        <item>CP</item>
        <item>CE1</item>
        <item>CE2</item>
        <item>CM1</item>
        <item>CM2</item>
        <item>6ème</item>
        <item>5ème</item>
        <item>4ème</item>
        <item>3ème</item>
        <item>2nd</item>
        <item>1ère</item>
        <item>Terminale</item>
        <item>Supérieur</item>
    </string-array>

    <!--Speciality-->
    <string name="mathematiques" translatable="false">Mathématiques</string>
    <string name="anglais" translatable="false">Anglais</string>
    <string name="francais" translatable="false">Français</string>
    <string name="physique" translatable="false">Physique</string>
    <string name="chimie" translatable="false">Chimie</string>
    <string name="svt" translatable="false">SVT</string>
    <string name="histoire" translatable="false">Histoire</string>

    <string name="error_Entries" translatable="false">L\'adresse mail ou le mot de passe est erroné</string>
    <string name="CameraButton" translatable="false">CAMERA</string>
    <string name="GalleryButton" translatable="false">GALLERY</string>
    <string name="versionModification" tools:ignore="MissingTranslation">Modifier</string>
    <string name="versionConfirmation" tools:ignore="MissingTranslation">Valider</string>
    <string name="Studies" translatable="false">Études</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="grey_line">Grey Line</string>
    <string name="Description">Description</string>
    <string name="descriptionEvent">Event description</string>
    <string name="Add">Add</string>
    <string name="Frequency">Frequency</string>
    <string name="Never">Never</string>
    <string name="Everyday">Everyday</string>
    <string name="EveryWeek">Every weeks</string>
    <string name="EveryMonth">Every months</string>
    <string name="EveryYear">Every year</string>
    <string name="Reminder">Reminder</string>
    <string name="ten_min_before">10 minutes before</string>
    <string name="fifteen_min_before">15 minutes before</string>
    <string name="thirty_min_before">30 minutes before</string>
    <string name="one_hour_before">1 hour before</string>
    <string name="two_hour_before">2 hours before</string>
    <string name="one_day_before">1 day before</string>
    <string name="two_days_before">2 days before</string>
    <string name="grey_drawer_line">Grey drawer line</string>
    <string name="Lesson">Lesson</string>
    <string name="top_right_drawer_date">top-right-drawer date</string>
    <string name="Date">Date</string>
    <string name="Subject">Subject</string>
    <string name="file_attached_image">File attached image</string>
    <string name="download_file_image">Download file image</string>
    <string name="Begin">Begin</string>
    <string name="Calendar">Calendar</string>
    <string name="textview">TextView</string>
    <string name="End">End</string>
    <string name="article_image">Article image</string>
    <string name="blue_dot">Blue dot</string>
    <string name="chapter_lesson">Lesson / chapter approached</string>
    <string name="professor_name">Professor name</string>
    <string name="company_image">Company image</string>
    <string name="job_name">Job name</string>
    <string name="ecosia_internship">Ecosia - Internship</string>
    <string name="back_arrow">Back arrow</string>
    <string name="new_event">New event</string>
    <string name="title">Title</string>
    <string name="give_name_project">Give a name to the project</string>
    <string name="Students">Student(s)</string>
    <string name="add_student_button">Add student button</string>
    <string name="Invite_multiple_students">Invite one or several student(s)</string>
    <string name="add_reminder">Add a reminder</string>
    <string name="define_frequency">Define repetition frequency</string>
    <string name="add_description">Add an description</string>
    <string name="create">Create</string>
    <string name="scholar_level">Scholar level</string>
    <string name="firstName_lastName">FirstName LastName</string>
    <string name="Dashboard">Dashboard</string>
    <string name="agenda">Agenda</string>
    <string name="student_notebook">Student Notebook</string>
    <string name="My_professors">My professors</string>
    <string name="bill">Bill</string>
    <string name="disconnection">Disconnection</string>
    <string name="today">Today</string>
    <string name="upcoming_class">Upcoming class</string>
    <string name="student_name">Student Name</string>
    <string name="professor_image">Professor image</string>
    <string name="our_offers">Our offers</string>
    <string name="private_lesson">Private lesson</string>
    <string name="tutoring">Tutoring</string>
    <string name="News">News</string>
    <string name="menu_drawer">Menu drawer</string>
    <string name="notification_bell">Notification bell</string>
    <string name="number_file_attached">number file attached</string>
    <string name="file_attached">file attached</string>
    <string name="validate_lesson">Validate the lesson to see the notebook</string>
    <string name="validate_button">Validate button</string>
    <string name="historic">Historic</string>
    <string name="add_event_button">Add event button</string>
    <string name="my_student">My student</string>
    <string name="student_image">Student image</string>
    <string name="offer_job_internship">Jobs and internships offers</string>
    <string name="add_document_button">Add document button</string>
    <string name="Add_new_note">Add new note</string>
    <string name="associate_document">You can also associate documents</string>
    <string name="pending_validation">Pending validation</string>
    <string name="notebook">Notebook</string>
    <string name="payslip">Payslips</string>
    <string name="my_contacts">My contacts</string>
    <string name="invoice" tools:ignore="MissingTranslation">Factures</string>
    <string name="returndashboard" tools:ignore="MissingTranslation">retour</string>
    <string name="ReturnName" tools:ignore="MissingTranslation">retourNom</string>
    <string name="deconnexionimage" tools:ignore="MissingTranslation">Deconnection</string>
</resources>