<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottomSheetContainer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bottom_sheet_background"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView18"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/sheet_bar"
        android:contentDescription="@string/grey_line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="30sp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView29"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Frequency"
            android:textColor="#333"
            android:textSize="20sp"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/radio_frequency"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="30sp"
            android:gravity="start"
            android:layoutDirection="rtl">

            <RadioButton
                android:id="@+id/radioButton3"
                style="@android:style/Widget.Holo.Light.CompoundButton.RadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/Never" />

            <ImageView
                android:id="@+id/imageView21"
                android:layout_width="match_parent"
                android:layout_height="4sp"
                app:srcCompat="@drawable/line_date"
                android:contentDescription="@string/grey_line" />

            <RadioButton
                android:id="@+id/radioButton5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Everyday" />

            <ImageView
                android:id="@+id/imageView22"
                android:layout_width="match_parent"
                android:layout_height="4sp"
                app:srcCompat="@drawable/line_date"
                android:contentDescription="@string/grey_line" />

            <RadioButton
                android:id="@+id/radioButton4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/EveryWeek" />

            <ImageView
                android:id="@+id/imageView23"
                android:layout_width="match_parent"
                android:layout_height="4sp"
                app:srcCompat="@drawable/line_date"
                android:contentDescription="@string/grey_line" />

            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/EveryMonth" />

            <ImageView
                android:id="@+id/imageView26"
                android:layout_width="match_parent"
                android:layout_height="4sp"
                app:srcCompat="@drawable/line_date"
                android:contentDescription="@string/grey_line" />

            <RadioButton
                android:id="@+id/radioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/EveryYear" />
        </RadioGroup>

    </LinearLayout>

</LinearLayout>