<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottomSheetContainer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bottom_sheet_background"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView18"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/grey_line"
        android:src="@drawable/sheet_bar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="30sp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView29"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Description"
            android:textColor="#333"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextTextPersonName2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15sp"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/descriptionEvent"
            android:textSize="16sp"
            android:autofillHints="" />

        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="70sp"
            android:layout_marginTop="120sp"
            android:backgroundTint=" #59ADFF"
            android:text="@string/Add"
            android:textColorHighlight="#FFFFFF"
            app:cornerRadius="30sp" />
    </LinearLayout>

</LinearLayout>