<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LoginActivity">

    <TextView
        android:id="@+id/registerRef"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:clickable="true"
        android:focusable="true"
        android:onClick="sendToInscription"
        android:text="@string/Inscription"
        android:textColor="@color/cyan"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iconImage"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="32dp"
        android:contentDescription="@string/Icon_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerRef"
        app:srcCompat="@drawable/icon" />


    <LinearLayout
        android:id="@+id/linearInfomartionLayout"
        android:layout_width="0dp"
        android:layout_height="300dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/iconImage"
        app:layout_constraintTop_toBottomOf="@+id/iconImage">

        <TextView
            android:id="@+id/welcomeMessage"
            android:layout_width="150dp"
            android:layout_height="0dp"
            android:layout_weight="0.4"
            android:text="@string/Connection_Message"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:textColor="@color/black" />

        <TextView
            android:id="@+id/mailView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.2"
            android:contentDescription="@string/Email_Text"
            android:text="@string/Email_Text"
            android:textColor="@color/cyan"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/mailText"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.3"
            android:autofillHints="@string/Email_Text"
            android:ems="10"
            android:hint="@string/Email_Text"
            android:inputType="textPersonName"
            android:textColor="#000"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/passwordView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.2"
            android:text="@string/Password_Text"
            android:textColor="@color/cyan" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/passwordText"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.9"
                android:autofillHints="@string/Hint_pwd"
                android:cursorVisible="false"
                android:ems="10"
                android:hint="@string/Hint_pwd"
                android:inputType="textPassword"
                tools:ignore="NestedWeights" />

            <ImageView
                android:id="@+id/visiblePwdView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.1"
                android:clickable="true"
                android:focusable="true"
                android:onClick="visiblePassword"
                android:src="@drawable/eye"
                android:contentDescription="TODO" />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/forgotPasswordRef"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/Forgot_Password"
        android:textColor="@color/cyan"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/linearInfomartionLayout"
        app:layout_constraintTop_toBottomOf="@+id/linearInfomartionLayout" />

    <Button
        android:id="@+id/inscriptionButton"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:background="@drawable/rectangle"
        android:onClick="sendToProfil"
        android:text="@string/Button_Connection"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgotPasswordRef" />

    <ImageView
        android:id="@+id/imageIllustrationView"
        android:layout_width="294dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="160dp"
        android:contentDescription="@string/Icon_name"
        android:scaleType="fitStart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inscriptionButton"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/illustration_work" />

</androidx.constraintlayout.widget.ConstraintLayout>